<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    android:orientation="vertical"
    tools:context=".controller.DetailsActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <EditText
        android:id="@+id/edTxtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <EditText
        android:id="@+id/edTxtArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/artist"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <EditText
        android:id="@+id/edTxtAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/album"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <EditText
        android:id="@+id/edTxtYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/year"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <EditText
        android:id="@+id/edTxtGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/genre"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <Button
        android:id="@+id/btnInsert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:onClick="insertBtn"
        android:text="@string/save_music" />

</LinearLayout>